# StormByte

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql.yml  doc.yml  generate-doc.yml  jekyll-gh-pages.yml
cmake/: FindStormByte.cmake  install.cmake
lib/: CMakeLists.txt
lib/public/StormByte/: bitmask.hxx  error.cxx  error.hxx  exception.hxx  expected.hxx  helpers.hxx  iterable.hxx  serializable.cxx  serializable.hxx  string.cxx  string.hxx  thread_lock.cxx  thread_lock.hxx  type_traits.hxx  uuid.cxx  uuid.hxx  variadic_value.hxx
test/: CMakeLists.txt  bitmask_test.cxx  github_test.cxx  iterable_test.cxx  serialization_test.cxx  string_test.cxx  thread_lock_test.cxx  uuid_test.cxx
